# osm-history-renderer

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  index.html  karlsruhe.html
cmake/: FindGEOS.cmake  FindOsmium.cmake
importer/: .gitignore  CMakeLists.txt  Makefile  SConstruct  compare-nodestores.sh  dbadapter.hpp  dbconn.hpp  dbcopyconn.hpp  entitytracker.hpp  geombuilder.hpp  handler.hpp  hstore.hpp  import  importer.cpp  last_entity_tracker.hpp  logger.hpp  minortimescalculator.hpp  mp-test.cpp  nodestore.hpp  polygonidentifyer.hpp  project.hpp  sorting_checker.hpp  sorttest.hpp  timestamp.hpp  zordercalculator.hpp
importer/nodestore/: sparse.hpp  stl.hpp
importer/scheme/: 00-before.sql  99-after.sql  README.md  XX-drop.sql
importer/test/: Huxelrebeweg.osh  deleted-areaway-simple.osh  deleted-node-simple.osh  deleted-node.osh  deleted-way-simple.osh  deleted-way.osh  fetch-way-with-hist.php  hamilton_city_centre.osh  username-with-backslash.osh  way-area-history.osh  way-history.osh
js-filter/: importer.js
js-filter/lib/: base.js
renderer/: .gitignore  render  render-animation.py  render.py  testsuite.sh
renderer/styles/osmorg/: .gitignore  README.md  layer-order.txt  mapnik2-symbolizer-convert.html  osmorg.xml
renderer/styles/osmorg/inc/: colors.xml.inc  datasource-settings.xml.inc  fontset-settings.xml.inc  inc.xml.inc  layers.xml.inc  scales.xml.inc  settings.xml.inc
renderer/styles/osmorg/inc/layer/: landcover.xml  places.xml  places.xml.inc  pois.xml  pois.xml.inc  power.xml.inc  roads-minor.xml  roads.xml  shapefiles.xml  shapefiles.xml.inc
renderer/styles/osmorg/inc/layer/pois/: accommodation.xml  accommodation.xml.inc  aerealway.xml.inc  amenity.xml  amenity.xml.inc  barrier.xml  barrier.xml.inc  education.xml  education.xml.inc  food.xml  food.xml.inc  health.xml  health.xml.inc  manmade.xml  manmade.xml.inc  money.xml  money.xml.inc  place_of_worship.xml  place_of_worship.xml.inc  shopping.xml  shopping.xml.inc  sport.xml  sport.xml.inc  tourist.xml  tourist.xml.inc  transport.xml
renderer/styles/osmorg/inc/layer/roads/: livingstreet.xml  residential.xml  service.xml
renderer/styles/osmorg/symbols/: recolourall.sh  topng.sh
renderer/styles/osmorg/symbols/color/: README
renderer/styles/osmorg/symbols/png/: README
renderer/styles/points/: points.xml
renderer/styles/simple/: simple.xml
scheme/: 00-before.sql  99-after.sql
